Finished* glossary for chap 2.

--- a/glossary.tex
+++ b/glossary.tex
@@ -9,5 +9,10 @@
 \newabbreviation{hdfs}{HDFS}{Hadoop Distributed File System}
 \newabbreviation{lusi}{LUSI}{Learning using Statistical Inference}
 \newabbreviation{iot}{IoT}{Internet of Things}
+\newabbreviation{lifo}{LIFO}{last-in-first-out}
+\newabbreviation{fifo}{FIFO}{first-in-first-out}
+\newabbreviation{pmf}{PMF}{probability mass function}
+\newabbreviation{pdf}{PDF}{probability density function}
+\newabbreviation{cdf}{CDF}{cumulative distribution function}
 
 \makeglossaries
