--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -446,13 +446,13 @@ $\left[a_1, a_2, \dots, a_n\right]$, where the $i$ in $a_i$ is the index of the 
 % reference.
 
 \paragraph{Stacks}  A stack is a collection of elements that are accessed in a
-last-in-first-out (LIFO) order.  Elements are added to the top of the stack and
+\gls{lifo} order.  Elements are added to the top of the stack and
 removed from the top of the stack.  In other words, only two operations are
 allowed: push (add an element to the top of the stack) and pop (remove the top element).
 Only the top element is accessible.
 
 \paragraph{Queues}  A queue is a collection of elements that are accessed in a
-first-in-first-out (FIFO) order.  Elements are added to the back of the queue and
+\gls{fifo} order.  Elements are added to the back of the queue and
 removed from the front of the queue.  The two operations allowed are enqueue (add an
 element to the back of the queue) and dequeue (remove the front element).  Only the
 front and back elements are accessible.
@@ -869,7 +869,7 @@ probability mass function or probability density function --- see below.
 
 \paragraph{Probability mass function}
 
-The probability mass function (PMF) of a discrete random variable $X$ is the
+The \gls{pmf} of a discrete random variable $X$ is the
 function $p_X : \mathbb{Z} \rightarrow [0, 1]$ defined by
 \begin{equation}
   \label{eq:pmf}
@@ -878,7 +878,7 @@ function $p_X : \mathbb{Z} \rightarrow [0, 1]$ defined by
 
 \paragraph{Probability density function}
 
-The probability density function (PDF) of a continuous random variable $X$ is the
+The \gls{pdf} of a continuous random variable $X$ is the
 function $f_X : \mathbb{R} \rightarrow [0, \infty)$ defined by
 \begin{equation}
   \label{eq:pdf}
@@ -887,7 +887,7 @@ function $f_X : \mathbb{R} \rightarrow [0, \infty)$ defined by
 
 \paragraph{Cumulative distribution function}
 
-The cumulative distribution function (CDF) of a random variable $X$ is the function
+The \gls{cdf} of a random variable $X$ is the function
 $F_X : \mathbb{R} \rightarrow [0, 1]$ defined by
 \begin{equation}
   \label{eq:cdf}
