Starting review of chap 3.

--- a/data.tex
+++ b/data.tex
@@ -11,8 +11,19 @@
 %   \item Tidy data
 % \end{itemize}
 
-A useful start point for someone studying data science is the definition of the term
-itself.
+A useful start point for someone studying data science is a definition of the term itself.
+In this chapter, I discuss some definitions in literature and provide a definition of my
+own.
+
+As discussed in \cref{chap:history}, there is no consensus on the definition of data
+science.  However, they all agree that data science is cross-disciplinary and a very
+important field of study.
+
+Another important discussion is the evidence that data science is actually a new science.
+I argue that a ``new science'' is not a subject that its basis is built from the ground
+up\footnote{As it would as improductive as creating a ``new math'' for each new
+application.  All ``sciences'' rely on each other in some way}, but a subject that has a
+particular object of study.
 
 \begin{mainbox}{Chapter remarks}
 
@@ -43,6 +54,8 @@ itself.
 
 {}
 \clearpage
+
+\section{Data science definition}
 
 For \textcite{Zumel2019}, \emph{``data science is a cross-disciplinary practice that draws
 on methods from data engineering, descriptive statistics, data mining, machine learning,
@@ -176,6 +189,10 @@ reliable and ethical knowledge from huge amounts of data.
 %       reliable and ethical knowledge from huge amounts of data.
 %   \end{itemize}
 % \end{slidebox}
+
+\section{The data science continuum}
+
+From which point a subject becomes a new science?
 
 \section{Fundamental data theory}
 
