--- a/history.tex
+++ b/history.tex
@@ -229,11 +229,11 @@ science.
 
 \section{Timeline and historical markers}
 
-\textcite{Kelleher2018} provides an interesting timeline of data-driven methods and
+\textcite{Kelleher2018}\footfullcite{Kelleher2018} provides an interesting timeline of data-driven methods and
 influential figures in the field.  I reproduce it here with some changes, including
 some omissions and additions.  On the subject of data analysis, I include some of the
 exceptional remarks
-from \textcite{Vapnik1999b}.
+from \textcite{Vapnik1999b}\footfullcite{Vapnik1999b}.
 
 I first address data handling --- which I include data sources, collection, organization,
 storage, and transformation ---, and then data analysis and knowledge extraction.
