--- a/data.tex
+++ b/data.tex
@@ -13,9 +13,7 @@
 
 A useful start point for someone studying data science is a definition of the term itself.
 In this chapter, I discuss some definitions in literature and provide a definition of my
-own.
-
-As discussed in \cref{chap:history}, there is no consensus on the definition of data
+own.  As discussed in \cref{chap:history}, there is no consensus on the definition of data
 science.  However, they all agree that data science is cross-disciplinary and a very
 important field of study.
 
@@ -23,7 +21,18 @@ Another important discussion is the evidence that data science is actually a new
 I argue that a ``new science'' is not a subject that its basis is built from the ground
 up\footnote{As it would as improductive as creating a ``new math'' for each new
 application.  All ``sciences'' rely on each other in some way}, but a subject that has a
-particular object of study.
+particular object of study and that meets some criteria.
+
+Once we establish that data science is a new science, we need to understand one core
+concept: data.  In this book, I focus on structured data, which are data that are organized
+in a tabular format.  I discuss the importance of understanding the nature of the data we
+are working with and how we represent them.
+
+Finally, I discuss two important concepts in data science: database normalization and tidy
+data.  Database normalization is mainly focused on the data storage.  Tidy data is mainly
+focused on the requirements of data for analysis.  Both concepts interact with each other
+and have their mathematical foundations.  I bridge the gap between the two concepts by
+discussing their common mathematical foundations.
 
 \begin{mainbox}{Chapter remarks}
 
