Cleaning up and updating references.

--- a/references.bib
+++ b/references.bib
@@ -53,31 +53,23 @@
 @article{Beaumont2013,
   author = {Beaumont, Peter B and Bednarik, Robert G},
   year = {2013},
-  issue_date = {2013},
   publisher = {Australian Rock Art Research Association},
   address = {Caulfield South, Victoria, Australia},
   volume = {30},
   number = {1},
-  url = {https://search.informit.org/doi/10.3316/informit.488018706238392},
+  doi = {10.3316/informit.488018706238392},
   abstract = {A comprehensive review of the pre-Holocene palaeoart evidence from sub-Saharan Africa is presented. The scant figurative component appears to be entirely confined to the Later Stone Age. Beads and pendants range back further, to the latter half of the Middle Stone Age. The same applies to the notched items that are invariably based on either bone or red ochre. Incised lines have been reported from both of those periods, and extend into the preceding Early Middle Stone Age. Preliminary data would suggest that a comparable timespan is probably covered by cupules and grooves. Pigment manuports, sometimes with use damage, are traceable to late in the Earlier Stone Age. And lastly are occasional exotic manuports, the collection of which could have spanned the entire Stone Age.},
   journal = {Rock Art Research},
   pages = {33–54},
   numpages = {22}}
 
 @book{Ifrah1998,
-  added-at = {2010-04-30T23:14:41.000+0200},
   address = {London},
   author = {Ifrah, Georges},
-  biburl = {https://www.bibsonomy.org/bibtex/29dc79fd61c85481e4ce46a83501776ca/wujastyk},
-  description = {Wujastyk's main bibtex file, April 30, 2010},
-  interhash = {ae46c80b80b261ecdad3694e067c69d1},
-  intrahash = {9dc79fd61c85481e4ce46a83501776ca},
   isbn = {1 86046 324 x},
   keywords = {mathematics},
   note = {First published in French, 1994},
-  owner = {dom},
   publisher = {Harvill},
-  timestamp = {2010-04-30T23:15:04.000+0200},
   title = {The Universal History of Numbers, from Prehistory to the Invention of the Computer},
   year = 1998}
 
@@ -217,7 +209,6 @@
   isbn = {089791001X},
   publisher = {Association for Computing Machinery},
   address = {New York, NY, USA},
-  url = {https://doi.org/10.1145/582095.582120},
   doi = {10.1145/582095.582120},
   booktitle = {Proceedings of the 1979 ACM SIGMOD International Conference on Management of Data},
   pages = {153–160},
@@ -233,15 +224,13 @@ pages = {379-391},
 year = {1997},
 note = {Theoretical Computer Science in Australia and New Zealand},
 issn = {0304-3975},
-doi = {https://doi.org/10.1016/S0304-3975(97)00050-9},
-url = {https://www.sciencedirect.com/science/article/pii/S0304397597000509},
+doi = {10.1016/S0304-3975(97)00050-9},
 author = {Millist W. Vincent},
 keywords = {Relational database, Database design, Normalisation, Join dependencies, Fifth normal form}}
 
 @article{Wickham2014,
  title={Tidy Data},
  volume={59},
- url={https://www.jstatsoft.org/index.php/jss/article/view/v059i10},
  doi={10.18637/jss.v059.i10},
  number={10},
  journal={Journal of Statistical Software},
@@ -279,8 +268,7 @@ pages = {70-84},
 year = {2013},
 note = {Special Issue on Autonomous Learning},
 issn = {0893-6080},
-doi = {https://doi.org/10.1016/j.neunet.2012.11.001},
-url = {https://www.sciencedirect.com/science/article/pii/S0893608012002778},
+doi = {10.1016/j.neunet.2012.11.001},
 author = {Thiago Christiano Silva and Liang Zhao},
 }
 
@@ -323,7 +311,6 @@ pages = {1189 -- 1232},
 keywords = {boosting, decision trees, Function estimation, robust nonparametric regression},
 year = {2001},
 doi = {10.1214/aos/1013203451},
-URL = {https://doi.org/10.1214/aos/1013203451}
 }
 
 @inproceedings{Vapnik2015,
@@ -345,7 +332,7 @@ isbn="978-3-319-17091-6"
   edition = {4},
   year = {2022},
   publisher = {The MIT Press},
-  isbn = {9780262046305},
+  isbn = {978-0262046305},
   pages = {1312},
 }
 
@@ -367,6 +354,16 @@ isbn="978-3-319-17091-6"
   publisher = {Academic Press},
   isbn = {9780124079489},
   pages = {784},
+}
+
+@book{Ross2023,
+  author = {Sheldon M. Ross},
+  title = {Introduction to Probability Models},
+  edition = {13},
+  year = {2023},
+  publisher = {Academic Press},
+  isbn = {978-0443187612},
+  pages = {870},
 }
 
 @book{Ross2019,
