More references of good text books.

--- a/about.tex
+++ b/about.tex
@@ -1,4 +1,4 @@
-\chapter{About this book}
+\chapter{Preface}
 
 \begin{parwithqr}{https://github.com/verri/dsp-book}
   I intend to make this book forever free and open-source. You can find (and contribute
