--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -62,7 +62,8 @@ They are realized in programming languages, which are formal languages that can 
 to express algorithms.
 
 My suggestion of a comprehensive book about algorithms and data structures is
-\textcite{Cormen2022}\footfullcite{Cormen2022}.
+\textcite{Cormen2022}\footfullcite{Cormen2022}.  An alternative for beginners is
+\textcite{Guttag2021}\footfullcite{Guttag2021}.
 
 \subsection{Computational complexity}
 
@@ -624,7 +625,8 @@ should consult \textcite{Rosen2018}\footfullcite{Rosen2018}.
 
 Linear algebra is the branch of mathematics that studies vector spaces and linear
 transformations.  It is a fundamental tool in many areas of science and engineering.
-The basic objects of linear algebra are vectors and matrices.
+The basic objects of linear algebra are vectors and matrices.  A common textbook that
+covers the subject in depth is \textcite{Strang2023}\footfullcite{Strang2023}.
 
 \paragraph{Vector}  A vector is an ordered collection of numbers.  It is denoted by a bold
 lowercase letter, e.g. $\vec{v} = [v_i]_{i= 1,\dots, n}$ is a vector of length $n$.
