--- a/references.bib
+++ b/references.bib
@@ -384,3 +384,24 @@ isbn="978-3-319-17091-6"
   publisher = {John Wiley \& Sons},
   isbn = {0-471-00710-2},
 }
+
+@book{Guttag2021,
+  author = {John V. Guttag},
+  title = {Introduction to Computation and Programming Using Python},
+  subtitle = {With Application to Computational Modeling and Understanding Data},
+  edition = {3},
+  year = {2021},
+  publisher = {The MIT Press},
+  isbn = {978-0262542364},
+  pages = {664},
+}
+
+@book{Strang2023,
+  author = {Gilbert Strang},
+  title = {Introduction to Linear Algebra},
+  edition = {6},
+  year = {2023},
+  publisher = {Wellesley-Cambridge Press},
+  isbn = {978-1733146678},
+  pages = {440},
+}
