--- a/history.tex
+++ b/history.tex
@@ -239,6 +239,7 @@ I first address data handling --- which I include data sources, collection, orga
 storage, and transformation ---, and then data analysis and knowledge extraction.
 
 \subsection{Timeline of data handling}
+\label{sub:time-handling}
 
 The importance of collecting and organizing data goes without saying.  Data fuels analysis and
 decision making.  In the following, I present some of the most important milestones in the history
@@ -549,6 +550,7 @@ different forms.  The challenge is to collect, store, and process this data in a
 is meaningful and useful, also respecting privacy and security.
 
 \subsection{Timeline of data analysis}
+\label{sub:time-analysis}
 
 The way we think about data and knowledge extraction has evolved significantly over the
 years.  In the following, I present some of the most important milestones in the history
