--- a/main.tex
+++ b/main.tex
@@ -165,6 +165,7 @@
 \newtcbtheorem[auto counter, number within=chapter]{defbox}{Definition}{
   float=h!,
   colframe=black!20!white,
+  description delimiters parenthesis,
   base
 }{def}
 
