--- a/references.bib
+++ b/references.bib
@@ -405,3 +405,15 @@ isbn="978-3-319-17091-6"
   isbn = {978-1733146678},
   pages = {440},
 }
+
+@inproceedings{Hayashi1998,
+  author="Hayashi, Chikio",
+  editor="Hayashi, Chikio and Yajima, Keiji and Bock, Hans-Hermann and Ohsumi, Noboru and Tanaka, Yutaka and Baba, Yasumasa",
+  title="What is Data Science? Fundamental Concepts and a Heuristic Example",
+  booktitle="Data Science, Classification, and Related Methods",
+  year="1998",
+  publisher="Springer Japan",
+  address="Tokyo, Japan",
+  pages="40--51",
+  isbn="978-4-431-65950-1"
+}
