--- a/history.tex
+++ b/history.tex
@@ -127,9 +127,9 @@ is delegated to other fields and sciences.''
       \fill[filled] \naurcs;
     \end{scope}
     \draw[outline] \naurds node(ds) {};
-    \draw[outline] \naurcs node {computer science};
-    \draw[outline] \naurde node {domain expertise};
-    \node[anchor=north,above] at (0,2) {data science};
+    \draw[outline] \naurcs node {Computer science};
+    \draw[outline] \naurde node {Domain expertise};
+    \node[anchor=north,above] at (0,2) {Data science};
   \end{tikzpicture}
   \tcblower
     For Naur, data science studies the techniques to deal
@@ -182,10 +182,10 @@ performance computing for deep data analysis.
       \fill[filled] \clevelandcs;
     \end{scope}
     \draw[outline] \clevelandds node(ds) {};
-    \draw[outline] \clevelandst node {statistics};
-    \draw[outline] \clevelandde node {domain expertise};
-    \draw[outline] \clevelandcs node {computer science};
-    \node[anchor=north,above] at (0,2) {data science};
+    \draw[outline] \clevelandst node {Statistics};
+    \draw[outline] \clevelandde node {Domain expertise};
+    \draw[outline] \clevelandcs node {Computer science};
+    \node[anchor=north,above] at (0,2) {Data science};
   \end{tikzpicture}
   \tcblower
     For Cleveland, data science is the ``modern'' statistics,
