--- a/main.tex
+++ b/main.tex
@@ -40,6 +40,7 @@
 
 \usepackage{tikz}
 \usetikzlibrary{shapes, arrows.meta, positioning, shapes.geometric}
+\usetikzlibrary{fit}
 \usetikzlibrary {datavisualization.formats.functions}
 \usepackage{pgfplots}
 \makeatletter
