--- a/tasks.tex
+++ b/tasks.tex
@@ -2,8 +2,7 @@
 \label{chap:ml}
 
 \chapterprecishere{%
-  They say ``Na prática, a teoria é outra,'' I say ``Se sua teoria não funciona na
-  prática, ela está errada demais.''}
+  If a theory does not hold in practice, it is of no use.}
 
 In the previous chapter, we define two fundamental inductive learning tasks:
 \emph{classification} and \emph{regression}.  In real-world applications, however, we may
